tests/valid/sized_integers/return_5_i32.rs
/*
executionExitCode: 5
*/
main(): i32 {
    a: i32 = 5;
    return a;
}