tests/invalid/c_void/variable_type.rs
/*
compilationExitCode: 3
*/

main(): i32{
    a: c_void;
    return 5;
}